# Magistrska

./: .gitignore  README.md  pyproject.toml
notebooks/: demo.ipynb
src/models/: fair_models_v1.py  fair_models_v2.py  fair_models_v3.py  fair_models_v4.py  fair_models_v5.py  fair_models_v6.py  fair_models_v7.py
src/scalers/: custom_scalers.py
