[tool.poetry]
name = "magistrska-projekt"
version = "0.1.0"
description = ""
authors = ["tadej22 <70508984+tadej22@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "1.6.1"
pandas = "2.2.3"
matplotlib = "3.10.1"
jupyter = "1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
